<resources>
    <string name="app_name">Order</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="order_now">Order Now</string>
    <string name="delivery_text">Delivery</string>
    <string name="pickup_text">Pickup</string>
    <string name="or_text">OR</string>
    <string name="street_text">Street</string>
    <string name="street_number_text">Street Number</string>
    <string name="city_text">City</string>
    <string name="continue_text">continue</string>
    <string name="postal_code">Postal Code</string>
    <string name="menu">Menu</string>
    <string name="checkout_text">Checkout</string>
    <string name="total_vat_included_text">Total (VAT included)</string>
    <string name="order_text">Order</string>
    <string name="order_cart">Order Cart</string>
    <string name="select_a_store">Please select a store</string>
    <string name="cancel">cancel</string>
    <string name="your_selected_store_is">Your selected store is</string>
    <string name="please_select_your_delivery_method">Please select your delivery method</string>
    <string name="or">OR</string>
    <string name="street_streetnumber_city_postal_code">Street, Street-number, City, Postal code</string>
    <string name="add_notes">Add Notes</string>
    <string name="optional">Optional</string>
    <string name="add_to_cart">Add to Cart</string>
</resources>
