<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sdad"
    android:padding="@dimen/dimen_16dp"
    tools:context=".ui.fragment.order.LocationSelectionFragment">

    <TextView
        android:id="@+id/tvSeletedStore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/your_selected_store_is"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSeletedStore"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_marginBottom="100dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/please_select_your_delivery_method"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textStyle="bold" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:textColor="@color/colorWhite"
            android:fontFamily="serif"
            android:textSize="@dimen/font_25sp"
            android:text="Address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/etAddress"
            android:background="@color/colorWhite"
            android:fontFamily="serif"
            android:padding="@dimen/dimen_10dp"
            android:textColorHint="@color/colorGray"
            android:hint="@string/street_streetnumber_city_postal_code"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
          />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDelivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorCyan"
            android:fontFamily="serif"
            android:padding="@dimen/dimen_16dp"
            android:text="@string/delivery_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="serif"

            android:padding="@dimen/dimen_10dp"
            android:text="@string/or"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPickup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorGreen"
            android:fontFamily="serif"
            android:padding="@dimen/dimen_16dp"
            android:text="@string/pickup_text" />
    </LinearLayout>
</RelativeLayout>