<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:layout_margin="@dimen/dimen_16dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvAddressLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="Your Address"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/llAddressInputContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAddressLabel"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/street_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etStreet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:imeOptions="actionNext"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:hint="@string/street_number_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etStreetNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:imeOptions="actionNext"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:hint="@string/city_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:imeOptions="actionNext"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:hint="@string/postal_code">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPostalCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <include layout="@layout/btn_layout" />
</RelativeLayout>